# lightml

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: pre-release.yaml  pytest.yaml  release.yaml
config/: .python-semantic-release.json
config/semantic-release-templates/: CHANGELOG.md.j2
config/semantic-release-templates/.components/: changelog_init.md.j2  first_release.md.j2  macros.md.j2  unreleased_changes.md.j2
src/canaryml/: dummyfunctions.py
src/canaryml/datadescriptions/: __init__.py  category.py  data_description.py  image.py
src/canaryml/dataset/: __init__.py  base_dataset.py
src/canaryml/modelfactories/: __init__.py  base_model_factory.py
src/canaryml/predictionhandlers/: __init__.py  base_prediction_handler.py
src/canaryml/steps/: __init__.py  training.py
src/canaryml/trainer/: __init__.py  trainer.py
src/canaryml/trainer/keras/: __init__.py  exceptions.py  keras_trainer.py
src/canaryml/utils/: __init__.py  fonts.py  serialize.py
src/canaryml/utils/generation/: drawutils.py  imagegeneration.py
src/canaryml/utils/image/: __init__.py  image_size.py
src/canaryml/utils/io/: __init__.py  location_config.py  read.py  write.py
src/lightml/: dummyfunctions.py
tests/: conftest.py  test_file.py
tests/unit/datadescription/: test_category.py  test_image.py
tests/unit/trainer/: test_keras_trainer.py
tests/unit/utils/: test_serialize.py
tests/unit/utils/generation/: test_drawutils.py  test_imagegeneration.py
tests/unit/utils/image/: test_image_size.py
tests/unit/utils/io/: test_location_config.py  test_read.py  test_write.py
